deploy: cda6d6936049fdbe5636e8d5afd96ee5a91103cf

--- a/tutorials/0_tldr.ipynb
+++ b/tutorials/0_tldr.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "add262c2",
+   "id": "d068c4ad",
    "metadata": {},
    "source": [
     "# GRANAD at a glance"
@@ -10,30 +10,37 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe18ff95",
+   "id": "657da8f3",
    "metadata": {},
    "source": [
-    "A quick summary of the most essential features."
+    "GRANAD simulates electronic and optical properties of 2D material nanoflakes and heterostructures.\n",
+    "It is based on the single-electron tight-binding approximation and the master equation formalism that allows one to capture the time-resolved response to electromagnetic illumination.\n",
+    "For details of the framework and additional examples see [journal reference].\n",
+    "The online documentation provides a guideline for GRANAD's functionalities and usage examples.\n",
+    "Below, we begin with a quick summary of the most essential features: we list example static and dynamic quanitites that can be evaluated in GRANAD. For a step-by-step, more detailed introduction see the following documentation sections."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "989d6fae",
+   "id": "4454f29d",
    "metadata": {},
    "source": [
-    "## Static quantities"
+    "## Static quantities\n",
+    "In the example below, a triangular armchair-edged graphene nanoflake is created of the approximate size of 10 Angström.\n",
+    "First, we display the amplitudes for electron distribution over the flake sites in a selected eigenstate (amplitude ditribution in the SITE basis).\n",
+    "Next, the energy landscape of the single-particle tight-binding Hamiltonian in the nearest-neighbor approximation is shown. Colors encode the electronic population distribution among the eigenstates, i.e., in the ENERGY basis."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "467b7d3d",
+   "id": "68d1a4e1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T15:22:28.873143Z",
-     "iopub.status.busy": "2025-01-30T15:22:28.872968Z",
-     "iopub.status.idle": "2025-01-30T15:22:38.324080Z",
-     "shell.execute_reply": "2025-01-30T15:22:38.323453Z"
+     "iopub.execute_input": "2025-02-03T08:11:21.620976Z",
+     "iopub.status.busy": "2025-02-03T08:11:21.620798Z",
+     "iopub.status.idle": "2025-02-03T08:11:31.072747Z",
+     "shell.execute_reply": "2025-02-03T08:11:31.072098Z"
     }
    },
    "outputs": [
@@ -89,18 +96,18 @@
     "graphene = MaterialCatalog.get(\"graphene\") # MaterialCatalog.available() lists all materials\n",
     "\n",
     "flake = graphene.cut_flake(Triangle(10, armchair = True)) # more shapes available or define arbitrary polygons\n",
-    "flake.show_2d( display = flake.eigenvectors[:, flake.homo] ) # display \"fermi level state\"\n",
-    "flake.set_excitation(from_state = flake.homo, to_state = flake.lumo + 1, excited_electrons = 1) # excitations\n",
+    "flake.show_2d( display = flake.eigenvectors[:, flake.homo] ) # electron amplitudes in the single-particle HOMO state\n",
+    "flake.set_excitation(from_state = flake.homo, to_state = flake.lumo + 1, excited_electrons = 1) # N-electron initial state is set with a single electron excited from the homo to the lumo+1 level; by default, GRANAD sets the number of p_z electrons in graphene to be equal to the number of atomic sites. In case of degeneracy, GRANAD distributes electrons equally among states of the same energy.\n",
     "flake.show_energies() # energies\n",
     "\n",
     "# examples of physical quantities\n",
     "print(\"pz hopping between 0th and 2nd site\", flake.hamiltonian[0,2])\n",
     "print(\"0-th site occupation in SITE basis\", flake.initial_density_matrix.diagonal()[0])\n",
-    "print(\"homo occupation in ENERGY basis\", flake.initial_density_matrix_e.diagonal()[flake.homo])\n",
-    "print(\"HOMO-LUMO x-dipole\", flake.dipole_operator_e[0, flake.homo, flake.lumo])\n",
+    "print(\"homo occupation in ENERGY basis\", flake.initial_density_matrix_e.diagonal()[flake.homo])  # adding \"_e\" to the names observables gives access to their elements in the energy basis\n",
+    "print(\"HOMO-LUMO x-dipole\", flake.dipole_operator_e[0, flake.homo, flake.lumo]) # 0th, i.e. x-component of the dipole moment element between the HOMO and LUMO states\n",
     "\n",
     "# customization\n",
-    "onsite, nn, nnn = [0, -2., 0.1]\n",
+    "onsite, nn, nnn = [0, -2., 0.1] # This fragment defines the tight-binding Hamiltonian elements: [onsite, nearest-neighbor, next-nearest-neighbor, etc.] - you can define a longer list to include hopping among more distant neighbors\n",
     "new_hoppings = [onsite, nn, nnn]\n",
     "custom_graphene = MaterialCatalog.get(\"graphene\", hoppings = new_hoppings) # pass your own hoppings\n",
     "flake = custom_graphene.cut_flake(Triangle(10))\n",
@@ -109,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8fb1197",
+   "id": "94b7ef24",
    "metadata": {},
    "source": [
     "## Dynamic Quantities"
@@ -118,13 +125,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "afa0da4b",
+   "id": "4aaada91",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T15:22:38.326096Z",
-     "iopub.status.busy": "2025-01-30T15:22:38.325908Z",
-     "iopub.status.idle": "2025-01-30T15:22:43.967736Z",
-     "shell.execute_reply": "2025-01-30T15:22:43.967110Z"
+     "iopub.execute_input": "2025-02-03T08:11:31.075137Z",
+     "iopub.status.busy": "2025-02-03T08:11:31.074595Z",
+     "iopub.status.idle": "2025-02-03T08:11:36.561640Z",
+     "shell.execute_reply": "2025-02-03T08:11:36.561046Z"
     }
    },
    "outputs": [
@@ -155,11 +162,12 @@
     }
    ],
    "source": [
-    "# TD sims\n",
+    "# Time-domain (TD) simulations provide time-resolved density matrix that represents the state of an average electron in an N-electron flake. Note that for graphene, the tight-binding approach in GRANAD accounts for p_z electrons. Similar limitations apply to other materials.\n",
+    "# Below, we illuminate the flake with a spectrally-broad pulse of electromagnetic radiation. The dynamics of the electronic density matrix is found based on the master equation, which in the example below is used to evaluate the induced polarization as the expectation value of the time-dependent dipole moment. A Fourier transform provides the absorption spectrum.\n",
     "\n",
     "# pulsed field\n",
     "pulse = Pulse(\n",
-    "    amplitudes=[1e-5, 0, 0], frequency=2.3, peak=5, fwhm=2)\n",
+    "    amplitudes=[1e-5, 0, 0], frequency=2.3, peak=5, fwhm=2) # for details of Pulse-type illumination and GRANAD units, see the corresponding documentation sections\n",
     "\n",
     "# time evolution\n",
     "result = flake.master_equation(\n",
@@ -168,13 +176,15 @@
     "    relaxation_rate=1/10,\n",
     "    illumination=pulse,\n",
     ")\n",
+    "# spectral range where the absorption cross section should be computed:\n",
     "omega_max = 4\n",
     "omega_min = 0\n",
-    "p_omega = result.ft_output( omega_max, omega_min )[0]\n",
-    "omegas_td, pulse_omega = result.ft_illumination( omega_max, omega_min )\n",
-    "absorption_td = jnp.abs( -omegas_td * jnp.imag( p_omega[:,0] / pulse_omega[:,0] ) )\n",
+    "p_omega = result.ft_output( omega_max, omega_min )[0] # polarization in the frequency domain\n",
+    "omegas_td, pulse_omega = result.ft_illumination( omega_max, omega_min ) # illuminating field in the frequency domain\n",
+    "absorption_td = jnp.abs( -omegas_td * jnp.imag( p_omega[:,0] / pulse_omega[:,0] ) ) # absorption cross section evaluated based on the time-domain simulation\n",
     "\n",
     "# RPA\n",
+    "# GRANAD provides another method to evaluate the absorption cross section , based on the random phase approximation, as detailed in  [Thongrattanasiri et al.](https://pubs.acs.org/doi/10.1021/nn204780e)\n",
     "omegas_rpa = omegas_td\n",
     "polarizability = flake.get_polarizability_rpa(\n",
     "    omegas_rpa,\n",
@@ -183,6 +193,7 @@
     "    hungry = 2 )\n",
     "absorption_rpa = jnp.abs( polarizability.imag * 4 * jnp.pi * omegas_rpa )\n",
     "\n",
+    "# Below, absorption cross sections obtained with the two methods are compared.\n",
     "import matplotlib.pyplot as plt\n",
     "plt.plot(omegas_rpa, absorption_rpa / jnp.max(absorption_rpa), 'o', linewidth=2, label = 'RPA')\n",
     "plt.plot(omegas_td, absorption_td / jnp.max(absorption_td), linewidth=2, ls = '--', label = 'TD' ) \n",
@@ -196,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8128df8",
+   "id": "66de9dfd",
    "metadata": {},
    "source": [
     "# Miscellenia"
@@ -204,7 +215,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a04b10c9",
+   "id": "abf6fc93",
    "metadata": {},
    "source": [
     "All tutorials as [jupyter files](https://github.com/GRANADlauncher/granad/tree/gh-pages/tutorials)."
