--- a/tutorials/c_plotting.ipynb
+++ b/tutorials/c_plotting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6cfc91b5",
+   "id": "38d896fe",
    "metadata": {},
    "source": [
     "# Plotting\n",
@@ -14,17 +14,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c72dd72a",
+   "id": "f01382af",
    "metadata": {},
    "source": [
     "1. geometry\n",
-    "2. simulation results\n",
+    "2. simulation results in time or frequency domain\n",
     "3. space-dependent arrays (such as eigenstates, charges, ...)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "735e3918",
+   "id": "766671e3",
    "metadata": {},
    "source": [
     "All public plotting functions are associated with a list of orbitals."
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e854f90",
+   "id": "901ac780",
    "metadata": {},
    "source": [
     "## Geometry\n",
@@ -43,13 +43,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8a78a32b",
+   "id": "6e40c73c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T15:21:12.912214Z",
-     "iopub.status.busy": "2025-01-30T15:21:12.912035Z",
-     "iopub.status.idle": "2025-01-30T15:21:17.586839Z",
-     "shell.execute_reply": "2025-01-30T15:21:17.586217Z"
+     "iopub.execute_input": "2025-02-03T08:10:04.202304Z",
+     "iopub.status.busy": "2025-02-03T08:10:04.202128Z",
+     "iopub.status.idle": "2025-02-03T08:10:09.024339Z",
+     "shell.execute_reply": "2025-02-03T08:10:09.023740Z"
     }
    },
    "outputs": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c33335e",
+   "id": "041437e3",
    "metadata": {},
    "source": [
     "If we have a stack"
@@ -82,13 +82,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7ee02f78",
+   "id": "7ad130b9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T15:21:17.588779Z",
-     "iopub.status.busy": "2025-01-30T15:21:17.588491Z",
-     "iopub.status.idle": "2025-01-30T15:21:17.875772Z",
-     "shell.execute_reply": "2025-01-30T15:21:17.875202Z"
+     "iopub.execute_input": "2025-02-03T08:10:09.026268Z",
+     "iopub.status.busy": "2025-02-03T08:10:09.025997Z",
+     "iopub.status.idle": "2025-02-03T08:10:09.325887Z",
+     "shell.execute_reply": "2025-02-03T08:10:09.324985Z"
     }
    },
    "outputs": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "579415bc",
+   "id": "3e44ba81",
    "metadata": {},
    "source": [
     "## Simulation output"
@@ -120,15 +120,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73800f91",
+   "id": "4a8356d5",
    "metadata": {},
    "source": [
-    "There is a dedicated function for showing time-domain simulation results. Let's illustrate this by tracking the current considering the previously defined flake under x-polarized Gaussian pulsed illumination, which in GRANAD's units is equivalent to the velocity operator given by the commutator of the system hamiltonian $H$ and the polarization operator $\\bf{P}$"
+    "There is a dedicated function for showing time-domain simulation results. Let's illustrate this by tracking the current density considering the previously defined flake under x-polarized Gaussian pulsed illumination. The current density is related to the velocity operator given by the commutator of the system hamiltonian $H$ and the polarization operator $\\bf{P}$"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e9b31ea5",
+   "id": "7acbd92f",
    "metadata": {},
    "source": [
     "$$\\bf{v} = \\frac{-i}{\\hbar} [H, \\bf{P}]$$"
@@ -136,22 +136,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cda841b",
+   "id": "7e4c4ba9",
    "metadata": {},
    "source": [
-    "The time-dependent induced current (density) is given by the expectation value of the current density operator $\\bf{j}$, which is related to the velocity operator as $\\bf{j} = e\\bf{v}$. In GRANAD's units, setting the elementary charge $e = 1$, the velocity operator is thus identical to the current density operator, with which we can immediately evalute the induced currents due to the external field."
+    "The time-dependent induced current density is given by the expectation value of the operator $\\bf{j} = e\\bf{v}$. In GRANAD's units, setting the elementary charge $e = 1$, the velocity operator is thus identical to the current density operator, with which we can immediately evalute the induced currents due to the external field."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "49bac1a4",
+   "id": "8757f75b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T15:21:17.879049Z",
-     "iopub.status.busy": "2025-01-30T15:21:17.878337Z",
-     "iopub.status.idle": "2025-01-30T15:21:22.843219Z",
-     "shell.execute_reply": "2025-01-30T15:21:22.842732Z"
+     "iopub.execute_input": "2025-02-03T08:10:09.328628Z",
+     "iopub.status.busy": "2025-02-03T08:10:09.328231Z",
+     "iopub.status.idle": "2025-02-03T08:10:14.372048Z",
+     "shell.execute_reply": "2025-02-03T08:10:14.371431Z"
     }
    },
    "outputs": [
@@ -199,15 +199,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e885612",
+   "id": "87bed829",
    "metadata": {},
    "source": [
-    "A detailed description of parameters to the Gaussian pulse is given in the electric fields tutorial."
+    "A detailed description of parameters of the Gaussian pulse is given in the electric fields tutorial."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0548e62c",
+   "id": "b45174cf",
    "metadata": {},
    "source": [
     "We can also Fourier transform the result to obtain the frequency domain result by specifying the omega limits. Note that omitting the variables xlabel and ylabel will result in no axis labels."
@@ -216,13 +216,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "acef0521",
+   "id": "0bf08c04",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T15:21:22.845304Z",
-     "iopub.status.busy": "2025-01-30T15:21:22.844928Z",
-     "iopub.status.idle": "2025-01-30T15:21:23.419230Z",
-     "shell.execute_reply": "2025-01-30T15:21:23.418630Z"
+     "iopub.execute_input": "2025-02-03T08:10:14.374286Z",
+     "iopub.status.busy": "2025-02-03T08:10:14.373934Z",
+     "iopub.status.idle": "2025-02-03T08:10:14.945549Z",
+     "shell.execute_reply": "2025-02-03T08:10:14.944816Z"
     }
    },
    "outputs": [
@@ -238,12 +238,12 @@
     }
    ],
    "source": [
-    "flake.show_res( result, omega_max = 5, omega_min = 0, plot_labels = plot_labels )"
+    "flake.show_res( result, omega_min = 0, omega_max = 5, plot_labels = plot_labels )"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b46afd70",
+   "id": "1cc4792d",
    "metadata": {},
    "source": [
     "Note that the sparsity of the spectral grid ows to the sparse sampling in time domain which we have chosen for demonstrational purposes. A real simulation requires more careful refinement of the temporal grid. A finer temporal grid or longer integration time generally results in higher quality spectra."
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66f537b9",
+   "id": "cc28d22e",
    "metadata": {},
    "source": [
     "## Space-dependent arrays"
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d428f92",
+   "id": "c5c37bfc",
    "metadata": {},
    "source": [
     "The functions show_2d and show_3d are a bit more versatile than initially indicated."
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fb0a289",
+   "id": "ff6291b9",
    "metadata": {},
    "source": [
     "If we supply a \"display\" argument, we can plot an arbitrary array on the grid spanned by the orbitals and filter it by orbital tags. Let's demonstrate this by visualizing the lowest energy single-particle state of the flake"
@@ -276,13 +276,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "458f5106",
+   "id": "45aac9f8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T15:21:23.421420Z",
-     "iopub.status.busy": "2025-01-30T15:21:23.421057Z",
-     "iopub.status.idle": "2025-01-30T15:21:23.980228Z",
-     "shell.execute_reply": "2025-01-30T15:21:23.979642Z"
+     "iopub.execute_input": "2025-02-03T08:10:14.947847Z",
+     "iopub.status.busy": "2025-02-03T08:10:14.947607Z",
+     "iopub.status.idle": "2025-02-03T08:10:15.516889Z",
+     "shell.execute_reply": "2025-02-03T08:10:15.516221Z"
     }
    },
    "outputs": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7481acbd",
+   "id": "2bae0ddb",
    "metadata": {},
    "source": [
     "If you want a normalized plot of the absolute values, do"
@@ -313,13 +313,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0aafbb6e",
+   "id": "af1beeca",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T15:21:23.982321Z",
-     "iopub.status.busy": "2025-01-30T15:21:23.981851Z",
-     "iopub.status.idle": "2025-01-30T15:21:24.337426Z",
-     "shell.execute_reply": "2025-01-30T15:21:24.336789Z"
+     "iopub.execute_input": "2025-02-03T08:10:15.518988Z",
+     "iopub.status.busy": "2025-02-03T08:10:15.518580Z",
+     "iopub.status.idle": "2025-02-03T08:10:15.883962Z",
+     "shell.execute_reply": "2025-02-03T08:10:15.883351Z"
     }
    },
    "outputs": [
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6b7910a",
+   "id": "e1eb03cc",
    "metadata": {},
    "source": [
     "Furthermore, there are two special plot modes, given by the `mode` argument:\n",
@@ -355,13 +355,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "99690006",
+   "id": "dc6ba7ea",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T15:21:24.339388Z",
-     "iopub.status.busy": "2025-01-30T15:21:24.339185Z",
-     "iopub.status.idle": "2025-01-30T15:21:24.858834Z",
-     "shell.execute_reply": "2025-01-30T15:21:24.858193Z"
+     "iopub.execute_input": "2025-02-03T08:10:15.886232Z",
+     "iopub.status.busy": "2025-02-03T08:10:15.885828Z",
+     "iopub.status.idle": "2025-02-03T08:10:16.452959Z",
+     "shell.execute_reply": "2025-02-03T08:10:16.452307Z"
     }
    },
    "outputs": [
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60e98a3c",
+   "id": "9ec2828f",
    "metadata": {},
    "source": [
     "Additionally, if you supply the keyword argument name = \"MY-PLOT-NAME.pdf\" to any plotting function, the plot will not be displayed, but instead saved to disk in the directory you invoked Python."
@@ -402,7 +402,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0b44ee9",
+   "id": "776df526",
+   "metadata": {},
+   "source": [
+    "# Induced field visualization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1a162d5",
    "metadata": {},
    "source": [
     "There exists a convenience function to compute and visualize the induced field at an arbitrary time step. \n",
@@ -413,13 +421,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9a2dfd99",
+   "id": "240b7071",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T15:21:24.860713Z",
-     "iopub.status.busy": "2025-01-30T15:21:24.860501Z",
-     "iopub.status.idle": "2025-01-30T15:21:26.168998Z",
-     "shell.execute_reply": "2025-01-30T15:21:26.168371Z"
+     "iopub.execute_input": "2025-02-03T08:10:16.454985Z",
+     "iopub.status.busy": "2025-02-03T08:10:16.454753Z",
+     "iopub.status.idle": "2025-02-03T08:10:17.777666Z",
+     "shell.execute_reply": "2025-02-03T08:10:17.777133Z"
     }
    },
    "outputs": [
@@ -451,7 +459,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2af1e5f6",
+   "id": "f18bc654",
    "metadata": {},
    "source": [
     "Next, we define the extent of a 2D grid. This grid represents the spatial domain where the induced field \n",
@@ -462,13 +470,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "365e910f",
+   "id": "74d7c372",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T15:21:26.171056Z",
-     "iopub.status.busy": "2025-01-30T15:21:26.170712Z",
-     "iopub.status.idle": "2025-01-30T15:21:26.252460Z",
-     "shell.execute_reply": "2025-01-30T15:21:26.251945Z"
+     "iopub.execute_input": "2025-02-03T08:10:17.779701Z",
+     "iopub.status.busy": "2025-02-03T08:10:17.779330Z",
+     "iopub.status.idle": "2025-02-03T08:10:17.861975Z",
+     "shell.execute_reply": "2025-02-03T08:10:17.861461Z"
     }
    },
    "outputs": [],
@@ -487,7 +495,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2304d99a",
+   "id": "b91620eb",
    "metadata": {},
    "source": [
     "Finally, we use the `show_induced_field` function to compute and visualize the induced field on the \n",
@@ -498,13 +506,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c328bbf5",
+   "id": "186e7ae5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T15:21:26.254800Z",
-     "iopub.status.busy": "2025-01-30T15:21:26.254386Z",
-     "iopub.status.idle": "2025-01-30T15:21:27.304417Z",
-     "shell.execute_reply": "2025-01-30T15:21:27.303899Z"
+     "iopub.execute_input": "2025-02-03T08:10:17.864099Z",
+     "iopub.status.busy": "2025-02-03T08:10:17.863727Z",
+     "iopub.status.idle": "2025-02-03T08:10:18.979643Z",
+     "shell.execute_reply": "2025-02-03T08:10:18.979095Z"
     }
    },
    "outputs": [
