--- a/tutorials/d_basis_handling.ipynb
+++ b/tutorials/d_basis_handling.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6cafbf36",
+   "id": "27678890",
    "metadata": {},
    "source": [
     "# Basis Handling\n",
     "\n",
-    "We introduce the site and energy basis. "
+    "We introduce the site and energy bases."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7e38fc1a",
+   "id": "3dcdf378",
    "metadata": {},
    "source": [
     "## Default basis\n",
@@ -23,13 +23,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7325ff4a",
+   "id": "60d28168",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T15:22:20.832833Z",
-     "iopub.status.busy": "2025-01-30T15:22:20.832651Z",
-     "iopub.status.idle": "2025-01-30T15:22:25.157153Z",
-     "shell.execute_reply": "2025-01-30T15:22:25.156638Z"
+     "iopub.execute_input": "2025-02-03T08:11:13.436085Z",
+     "iopub.status.busy": "2025-02-03T08:11:13.435714Z",
+     "iopub.status.idle": "2025-02-03T08:11:17.833325Z",
+     "shell.execute_reply": "2025-02-03T08:11:17.832701Z"
     }
    },
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11890c47",
+   "id": "d3d04278",
    "metadata": {},
    "source": [
     "Additionally, should you be unsure, the site basis is always given by appending \"_x\"."
@@ -54,13 +54,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ff0675b5",
+   "id": "ceb6b1b8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T15:22:25.159472Z",
-     "iopub.status.busy": "2025-01-30T15:22:25.159086Z",
-     "iopub.status.idle": "2025-01-30T15:22:25.188892Z",
-     "shell.execute_reply": "2025-01-30T15:22:25.188341Z"
+     "iopub.execute_input": "2025-02-03T08:11:17.835637Z",
+     "iopub.status.busy": "2025-02-03T08:11:17.835300Z",
+     "iopub.status.idle": "2025-02-03T08:11:17.864922Z",
+     "shell.execute_reply": "2025-02-03T08:11:17.864311Z"
     }
    },
    "outputs": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e14ad97",
+   "id": "557957d3",
    "metadata": {},
    "source": [
     "There is also a built-in function for basis transformation"
@@ -87,13 +87,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "91ba2a5a",
+   "id": "ea536571",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T15:22:25.190952Z",
-     "iopub.status.busy": "2025-01-30T15:22:25.190556Z",
-     "iopub.status.idle": "2025-01-30T15:22:25.195426Z",
-     "shell.execute_reply": "2025-01-30T15:22:25.194956Z"
+     "iopub.execute_input": "2025-02-03T08:11:17.867081Z",
+     "iopub.status.busy": "2025-02-03T08:11:17.866630Z",
+     "iopub.status.idle": "2025-02-03T08:11:17.871387Z",
+     "shell.execute_reply": "2025-02-03T08:11:17.870835Z"
     }
    },
    "outputs": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4288fa3",
+   "id": "14c9aef4",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -121,22 +121,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86996f52",
+   "id": "80c5e035",
    "metadata": {},
    "source": [
-    "Transition dipole moments can be displayed in energy basis"
+    "Dipole moment elements can be displayed in energy basis"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6dd5f138",
+   "id": "b60c435d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T15:22:25.197340Z",
-     "iopub.status.busy": "2025-01-30T15:22:25.196939Z",
-     "iopub.status.idle": "2025-01-30T15:22:25.625887Z",
-     "shell.execute_reply": "2025-01-30T15:22:25.625221Z"
+     "iopub.execute_input": "2025-02-03T08:11:17.873222Z",
+     "iopub.status.busy": "2025-02-03T08:11:17.872904Z",
+     "iopub.status.idle": "2025-02-03T08:11:18.298119Z",
+     "shell.execute_reply": "2025-02-03T08:11:18.297309Z"
     }
    },
    "outputs": [
