--- a/tutorials/e_electric_fields.ipynb
+++ b/tutorials/e_electric_fields.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ccffe8dd",
+   "id": "c9cd3e19",
    "metadata": {},
    "source": [
     "# Electric Fields\n",
@@ -12,23 +12,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32b0880f",
+   "id": "c8dfdfdc",
    "metadata": {},
    "source": [
     "\n",
-    "The built-in electric fields are callables dependent on time. GRANAD offers pre-defined options for plane waves, useable via `Wave`, Gaussian pulses with a plane-wave profile, useable via `Pulse` and ramped-up fields, useable via `Ramp`. They are all documented in the API.\n"
+    "The built-in electric fields are callables dependent on time. GRANAD offers pre-defined options for monochromatic waves, useable via `Wave`, Gaussian pulses with a plane-wave profile, useable via `Pulse` and ramped-up fields, useable via `Ramp`. They are all documented in the API.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fe7debaa",
+   "id": "ea275b1a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T15:19:50.751657Z",
-     "iopub.status.busy": "2025-01-30T15:19:50.751457Z",
-     "iopub.status.idle": "2025-01-30T15:19:51.833326Z",
-     "shell.execute_reply": "2025-01-30T15:19:51.832822Z"
+     "iopub.execute_input": "2025-02-03T08:08:39.957088Z",
+     "iopub.status.busy": "2025-02-03T08:08:39.956914Z",
+     "iopub.status.idle": "2025-02-03T08:08:41.083604Z",
+     "shell.execute_reply": "2025-02-03T08:08:41.082461Z"
     }
    },
    "outputs": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de9f28aa",
+   "id": "046f2a31",
    "metadata": {},
    "source": [
     "So, calling \"Wave\" gives back a function we can evaluate at single points in time"
@@ -71,13 +71,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e1a25e25",
+   "id": "6fda6a97",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T15:19:51.835873Z",
-     "iopub.status.busy": "2025-01-30T15:19:51.835573Z",
-     "iopub.status.idle": "2025-01-30T15:19:51.909540Z",
-     "shell.execute_reply": "2025-01-30T15:19:51.909020Z"
+     "iopub.execute_input": "2025-02-03T08:08:41.086225Z",
+     "iopub.status.busy": "2025-02-03T08:08:41.085925Z",
+     "iopub.status.idle": "2025-02-03T08:08:41.167195Z",
+     "shell.execute_reply": "2025-02-03T08:08:41.166550Z"
     }
    },
    "outputs": [
@@ -96,22 +96,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7de207eb",
+   "id": "5dd456a4",
    "metadata": {},
    "source": [
-    "A quick way to visualize them is to plot them (by default, granad considers real fields). To apply the electric field for many points, we need to vectorize it to obtain an array of results. JAX offers the vmap function that vectorizes the application."
+    "A quick way to visualize them is to plot them (by default, GRANAD considers real fields). To evaluate the electric field in many points, we need to vectorize it to obtain an array of results. JAX offers the vmap function that vectorizes the application."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3345a6fa",
+   "id": "50f53eb2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T15:19:51.911525Z",
-     "iopub.status.busy": "2025-01-30T15:19:51.911162Z",
-     "iopub.status.idle": "2025-01-30T15:19:51.993157Z",
-     "shell.execute_reply": "2025-01-30T15:19:51.992543Z"
+     "iopub.execute_input": "2025-02-03T08:08:41.169462Z",
+     "iopub.status.busy": "2025-02-03T08:08:41.169096Z",
+     "iopub.status.idle": "2025-02-03T08:08:41.260049Z",
+     "shell.execute_reply": "2025-02-03T08:08:41.259469Z"
     }
    },
    "outputs": [
@@ -132,13 +132,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f769bcc4",
+   "id": "f0508d61",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T15:19:51.995393Z",
-     "iopub.status.busy": "2025-01-30T15:19:51.994870Z",
-     "iopub.status.idle": "2025-01-30T15:19:52.591915Z",
-     "shell.execute_reply": "2025-01-30T15:19:52.591295Z"
+     "iopub.execute_input": "2025-02-03T08:08:41.261994Z",
+     "iopub.status.busy": "2025-02-03T08:08:41.261624Z",
+     "iopub.status.idle": "2025-02-03T08:08:41.882030Z",
+     "shell.execute_reply": "2025-02-03T08:08:41.881382Z"
     }
    },
    "outputs": [
@@ -163,24 +163,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb24a85a",
+   "id": "3b2107c8",
    "metadata": {},
    "source": [
     "The `Ramp` electric field introduces a ramping effect to the field amplitude. \n",
-    "The field starts ramping up at a specified time (`time_ramp`) and the duration of this ramping effect is controlled by `ramp_duration`.\n",
+    "The field ramping can be shifted in time via the parameter `time_ramp` and the duration of this ramping effect is controlled by `ramp_duration`.\n",
     "The `amplitudes` parameter defines the field components in the x, y, and z directions, while `frequency` specifies the time-harmonic oscillation of the field."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f225b1fd",
+   "id": "c739b9b1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T15:19:52.593855Z",
-     "iopub.status.busy": "2025-01-30T15:19:52.593500Z",
-     "iopub.status.idle": "2025-01-30T15:19:53.008749Z",
-     "shell.execute_reply": "2025-01-30T15:19:53.008141Z"
+     "iopub.execute_input": "2025-02-03T08:08:41.884176Z",
+     "iopub.status.busy": "2025-02-03T08:08:41.883972Z",
+     "iopub.status.idle": "2025-02-03T08:08:42.303566Z",
+     "shell.execute_reply": "2025-02-03T08:08:42.302943Z"
     }
    },
    "outputs": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06f4f5c0",
+   "id": "8e8c3d41",
    "metadata": {},
    "source": [
     "The `Pulse` electric field introduces a temporally localized oscillation using a Gaussian envelope.\n",
@@ -222,13 +222,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "00a68293",
+   "id": "751e747c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T15:19:53.010748Z",
-     "iopub.status.busy": "2025-01-30T15:19:53.010395Z",
-     "iopub.status.idle": "2025-01-30T15:19:53.273412Z",
-     "shell.execute_reply": "2025-01-30T15:19:53.272827Z"
+     "iopub.execute_input": "2025-02-03T08:08:42.305755Z",
+     "iopub.status.busy": "2025-02-03T08:08:42.305407Z",
+     "iopub.status.idle": "2025-02-03T08:08:42.553671Z",
+     "shell.execute_reply": "2025-02-03T08:08:42.552959Z"
     },
     "lines_to_next_cell": 0
    },
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "277b29d4",
+   "id": "1a776910",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbb41ad6",
+   "id": "f36de357",
    "metadata": {},
    "outputs": [],
    "source": []
