--- a/tutorials/j_defining_materials.ipynb
+++ b/tutorials/j_defining_materials.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f98c8958",
+   "id": "3a9536c6",
    "metadata": {},
    "source": [
     "# Defining Materials\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc187940",
+   "id": "558be23b",
    "metadata": {},
    "source": [
     "## Defining a custom material\n",
@@ -23,13 +23,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "edb5667b",
+   "id": "ed65e976",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T15:20:22.497341Z",
-     "iopub.status.busy": "2025-01-30T15:20:22.497159Z",
-     "iopub.status.idle": "2025-01-30T15:20:23.577995Z",
-     "shell.execute_reply": "2025-01-30T15:20:23.576806Z"
+     "iopub.execute_input": "2025-02-03T08:09:12.592555Z",
+     "iopub.status.busy": "2025-02-03T08:09:12.592373Z",
+     "iopub.status.idle": "2025-02-03T08:09:13.701194Z",
+     "shell.execute_reply": "2025-02-03T08:09:13.699954Z"
     }
    },
    "outputs": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd4c2fab",
+   "id": "6c7006e6",
    "metadata": {},
    "source": [
     "So, the Material class essentially defines a small language we can use to specify a material. A preliminary, work-in-progress version of the Hubbard model would look like this"
@@ -104,13 +104,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1550f8a0",
+   "id": "1d6bf766",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T15:20:23.580504Z",
-     "iopub.status.busy": "2025-01-30T15:20:23.580245Z",
-     "iopub.status.idle": "2025-01-30T15:20:23.623561Z",
-     "shell.execute_reply": "2025-01-30T15:20:23.623059Z"
+     "iopub.execute_input": "2025-02-03T08:09:13.703734Z",
+     "iopub.status.busy": "2025-02-03T08:09:13.703453Z",
+     "iopub.status.idle": "2025-02-03T08:09:13.747619Z",
+     "shell.execute_reply": "2025-02-03T08:09:13.747106Z"
     }
    },
    "outputs": [],
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd3df92c",
+   "id": "0a690a8e",
    "metadata": {},
    "source": [
     "To see how cutting finite flakes from this 3D material works, let's inspect"
@@ -158,13 +158,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "efeaac59",
+   "id": "e8fbca56",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T15:20:23.625557Z",
-     "iopub.status.busy": "2025-01-30T15:20:23.625387Z",
-     "iopub.status.idle": "2025-01-30T15:20:23.629138Z",
-     "shell.execute_reply": "2025-01-30T15:20:23.628681Z"
+     "iopub.execute_input": "2025-02-03T08:09:13.750075Z",
+     "iopub.status.busy": "2025-02-03T08:09:13.749481Z",
+     "iopub.status.idle": "2025-02-03T08:09:13.753371Z",
+     "shell.execute_reply": "2025-02-03T08:09:13.752726Z"
     }
    },
    "outputs": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a048a50b",
+   "id": "6c8a734f",
    "metadata": {},
    "source": [
     "So, the cut_flake method is automatically determined. We have specified a 3D material, so let's look at the function that is applied"
@@ -208,13 +208,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6938b5c1",
+   "id": "a151b75f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T15:20:23.630926Z",
-     "iopub.status.busy": "2025-01-30T15:20:23.630590Z",
-     "iopub.status.idle": "2025-01-30T15:20:23.634026Z",
-     "shell.execute_reply": "2025-01-30T15:20:23.633467Z"
+     "iopub.execute_input": "2025-02-03T08:09:13.755459Z",
+     "iopub.status.busy": "2025-02-03T08:09:13.755085Z",
+     "iopub.status.idle": "2025-02-03T08:09:13.758650Z",
+     "shell.execute_reply": "2025-02-03T08:09:13.758181Z"
     }
    },
    "outputs": [
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f34a708d",
+   "id": "87f0a418",
    "metadata": {},
    "source": [
     "Let's see this in action"
@@ -264,13 +264,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f8e0566d",
+   "id": "917c3f17",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T15:20:23.635820Z",
-     "iopub.status.busy": "2025-01-30T15:20:23.635492Z",
-     "iopub.status.idle": "2025-01-30T15:20:25.223457Z",
-     "shell.execute_reply": "2025-01-30T15:20:25.222450Z"
+     "iopub.execute_input": "2025-02-03T08:09:13.760447Z",
+     "iopub.status.busy": "2025-02-03T08:09:13.760101Z",
+     "iopub.status.idle": "2025-02-03T08:09:15.390647Z",
+     "shell.execute_reply": "2025-02-03T08:09:15.390041Z"
     }
    },
    "outputs": [
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf6135d2",
+   "id": "68457b5e",
    "metadata": {},
    "source": [
     "## Direction-dependent couplings"
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b59bcc40",
+   "id": "efa32f7a",
    "metadata": {},
    "source": [
     "Up to now, we have only considered couplings dependent on the scalar distance between two orbitals.\n",
@@ -320,13 +320,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f4e30e4c",
+   "id": "0f66839f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T15:20:25.225983Z",
-     "iopub.status.busy": "2025-01-30T15:20:25.225765Z",
-     "iopub.status.idle": "2025-01-30T15:20:25.407826Z",
-     "shell.execute_reply": "2025-01-30T15:20:25.407308Z"
+     "iopub.execute_input": "2025-02-03T08:09:15.393409Z",
+     "iopub.status.busy": "2025-02-03T08:09:15.392923Z",
+     "iopub.status.idle": "2025-02-03T08:09:15.590433Z",
+     "shell.execute_reply": "2025-02-03T08:09:15.589933Z"
     }
    },
    "outputs": [],
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee471543",
+   "id": "23e66721",
    "metadata": {},
    "source": [
     "We now display the edge state"
@@ -407,13 +407,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a9a37929",
+   "id": "ba793f28",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T15:20:25.410050Z",
-     "iopub.status.busy": "2025-01-30T15:20:25.409677Z",
-     "iopub.status.idle": "2025-01-30T15:20:33.382248Z",
-     "shell.execute_reply": "2025-01-30T15:20:33.381629Z"
+     "iopub.execute_input": "2025-02-03T08:09:15.592816Z",
+     "iopub.status.busy": "2025-02-03T08:09:15.592405Z",
+     "iopub.status.idle": "2025-02-03T08:09:23.988529Z",
+     "shell.execute_reply": "2025-02-03T08:09:23.987946Z"
     },
     "lines_to_next_cell": 2
    },
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4890d0b",
+   "id": "76877b05",
    "metadata": {},
    "source": [
     "## Modifying existing materials"
@@ -446,23 +446,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b38b6f3",
+   "id": "5f608eb6",
    "metadata": {},
    "source": [
-    "You can copy the material you want to modify and change/override its attributes.\n",
+    "You can copy the material you want to modify and change/overwrite its attributes.\n",
     "As an example, we will turn our ordinary graphene model into a direction-independent variant of the Haldane model by introducing complex nnn hoppings and without the staggered onsite potential"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ef2ca50d",
+   "id": "a4fe3129",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T15:20:33.384289Z",
-     "iopub.status.busy": "2025-01-30T15:20:33.383920Z",
-     "iopub.status.idle": "2025-01-30T15:20:33.400701Z",
-     "shell.execute_reply": "2025-01-30T15:20:33.400165Z"
+     "iopub.execute_input": "2025-02-03T08:09:23.990353Z",
+     "iopub.status.busy": "2025-02-03T08:09:23.990169Z",
+     "iopub.status.idle": "2025-02-03T08:09:24.007774Z",
+     "shell.execute_reply": "2025-02-03T08:09:24.007186Z"
     }
    },
    "outputs": [
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5d53f49",
+   "id": "f378b576",
    "metadata": {},
    "source": [
     "## Handling non-periodic dimensions"
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff90b55a",
+   "id": "66b90f38",
    "metadata": {},
    "source": [
     "Say you want to have a custom ssh chain with 2 atoms in the unit cell, but displace one of the atoms in y-direction. You do this by including a second basis vector in y-direction and give the atom you want to displace a non-vanishing y-coordinate. To not get a 2D lattice, you have to specify explicitly which direction(s) you want to be periodically repeated."
@@ -526,13 +526,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "5c74625a",
+   "id": "3d58ba74",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T15:20:33.402705Z",
-     "iopub.status.busy": "2025-01-30T15:20:33.402324Z",
-     "iopub.status.idle": "2025-01-30T15:20:37.354450Z",
-     "shell.execute_reply": "2025-01-30T15:20:37.353914Z"
+     "iopub.execute_input": "2025-02-03T08:09:24.009888Z",
+     "iopub.status.busy": "2025-02-03T08:09:24.009433Z",
+     "iopub.status.idle": "2025-02-03T08:09:27.886620Z",
+     "shell.execute_reply": "2025-02-03T08:09:27.886024Z"
     },
     "lines_to_next_cell": 0
    },
@@ -590,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "173bee85",
+   "id": "a01ac1f0",
    "metadata": {
     "lines_to_next_cell": 2
    },
