--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "887e51a5",
+   "id": "0734a5a5",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c592cc9f",
+   "id": "bbecf66a",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bc381fb",
+   "id": "31c5ef6f",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e5677ff",
+   "id": "a7e6b0cd",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2dee4cae",
+   "id": "4698a5e3",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af9d108a",
+   "id": "84cb6ae3",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "12ea0f30",
+   "id": "4c80d469",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T15:20:10.280072Z",
-     "iopub.status.busy": "2025-01-30T15:20:10.279890Z",
-     "iopub.status.idle": "2025-01-30T15:20:13.348450Z",
-     "shell.execute_reply": "2025-01-30T15:20:13.347924Z"
+     "iopub.execute_input": "2025-02-03T08:08:59.960982Z",
+     "iopub.status.busy": "2025-02-03T08:08:59.960769Z",
+     "iopub.status.idle": "2025-02-03T08:09:03.035934Z",
+     "shell.execute_reply": "2025-02-03T08:09:03.035389Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "400cb894",
+   "id": "98a4b863",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,17 +89,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81427e2b",
+   "id": "660f8f6c",
    "metadata": {},
    "source": [
-    "1. a bare hamiltonian.\n",
-    "2. an induced coulomb interaction.\n",
+    "1. a bare Hamiltonian.\n",
+    "2. an induced Coulomb interaction.\n",
     "3. an external potential."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "594006c4",
+   "id": "be0fafad",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "397b2f4c",
+   "id": "157e813e",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "051c0764",
+   "id": "0c693409",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9006eba",
+   "id": "3cec343c",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2deaa43",
+   "id": "23973cce",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10d0f132",
+   "id": "75403c5e",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d8325afd",
+   "id": "5f39119c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T15:20:13.350621Z",
-     "iopub.status.busy": "2025-01-30T15:20:13.350342Z",
-     "iopub.status.idle": "2025-01-30T15:20:15.325945Z",
-     "shell.execute_reply": "2025-01-30T15:20:15.325380Z"
+     "iopub.execute_input": "2025-02-03T08:09:03.038248Z",
+     "iopub.status.busy": "2025-02-03T08:09:03.037817Z",
+     "iopub.status.idle": "2025-02-03T08:09:05.115548Z",
+     "shell.execute_reply": "2025-02-03T08:09:05.114937Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a00351f",
+   "id": "3c0c06b9",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9ed6a9c9",
+   "id": "b50ea867",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T15:20:15.327883Z",
-     "iopub.status.busy": "2025-01-30T15:20:15.327680Z",
-     "iopub.status.idle": "2025-01-30T15:20:15.331209Z",
-     "shell.execute_reply": "2025-01-30T15:20:15.330621Z"
+     "iopub.execute_input": "2025-02-03T08:09:05.117719Z",
+     "iopub.status.busy": "2025-02-03T08:09:05.117261Z",
+     "iopub.status.idle": "2025-02-03T08:09:05.121075Z",
+     "shell.execute_reply": "2025-02-03T08:09:05.120349Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "879b66e0",
+   "id": "ee1ec85a",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97b7d840",
+   "id": "8a9cceb3",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dca8c067",
+   "id": "ef9df617",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebe992f5",
+   "id": "504efb3e",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e8fcaba3",
+   "id": "580b73cd",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T15:20:15.333050Z",
-     "iopub.status.busy": "2025-01-30T15:20:15.332865Z",
-     "iopub.status.idle": "2025-01-30T15:20:15.379393Z",
-     "shell.execute_reply": "2025-01-30T15:20:15.378828Z"
+     "iopub.execute_input": "2025-02-03T08:09:05.123045Z",
+     "iopub.status.busy": "2025-02-03T08:09:05.122673Z",
+     "iopub.status.idle": "2025-02-03T08:09:05.169201Z",
+     "shell.execute_reply": "2025-02-03T08:09:05.168655Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9686f2c",
+   "id": "f0a7f7c2",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c6927986",
+   "id": "439937f3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T15:20:15.381218Z",
-     "iopub.status.busy": "2025-01-30T15:20:15.381021Z",
-     "iopub.status.idle": "2025-01-30T15:20:15.451471Z",
-     "shell.execute_reply": "2025-01-30T15:20:15.450873Z"
+     "iopub.execute_input": "2025-02-03T08:09:05.171245Z",
+     "iopub.status.busy": "2025-02-03T08:09:05.170883Z",
+     "iopub.status.idle": "2025-02-03T08:09:05.243351Z",
+     "shell.execute_reply": "2025-02-03T08:09:05.242822Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b041c580",
+   "id": "26a0ffc5",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c700a50",
+   "id": "658a9359",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2b9113e4",
+   "id": "efc3acd3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T15:20:15.453645Z",
-     "iopub.status.busy": "2025-01-30T15:20:15.453151Z",
-     "iopub.status.idle": "2025-01-30T15:20:15.480178Z",
-     "shell.execute_reply": "2025-01-30T15:20:15.479628Z"
+     "iopub.execute_input": "2025-02-03T08:09:05.245420Z",
+     "iopub.status.busy": "2025-02-03T08:09:05.244944Z",
+     "iopub.status.idle": "2025-02-03T08:09:05.272861Z",
+     "shell.execute_reply": "2025-02-03T08:09:05.272285Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cb5ffee",
+   "id": "0c8c6f62",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f85a475",
+   "id": "9dfe6efd",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51e914e2",
+   "id": "2ea79a20",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1e01d82",
+   "id": "20f0822c",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f123746",
+   "id": "73b03bd7",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5eb2b3d9",
+   "id": "bcedc0db",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T15:20:15.482377Z",
-     "iopub.status.busy": "2025-01-30T15:20:15.482029Z",
-     "iopub.status.idle": "2025-01-30T15:20:15.486097Z",
-     "shell.execute_reply": "2025-01-30T15:20:15.485517Z"
+     "iopub.execute_input": "2025-02-03T08:09:05.274964Z",
+     "iopub.status.busy": "2025-02-03T08:09:05.274570Z",
+     "iopub.status.idle": "2025-02-03T08:09:05.278739Z",
+     "shell.execute_reply": "2025-02-03T08:09:05.278271Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72fd56d5",
+   "id": "02000538",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "cb9919ef",
+   "id": "b7ae19a8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T15:20:15.487952Z",
-     "iopub.status.busy": "2025-01-30T15:20:15.487630Z",
-     "iopub.status.idle": "2025-01-30T15:20:15.492071Z",
-     "shell.execute_reply": "2025-01-30T15:20:15.491489Z"
+     "iopub.execute_input": "2025-02-03T08:09:05.280580Z",
+     "iopub.status.busy": "2025-02-03T08:09:05.280181Z",
+     "iopub.status.idle": "2025-02-03T08:09:05.283068Z",
+     "shell.execute_reply": "2025-02-03T08:09:05.282490Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d316a38c",
+   "id": "de50b3b3",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "72b3adfb",
+   "id": "a1ffb0d5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T15:20:15.493771Z",
-     "iopub.status.busy": "2025-01-30T15:20:15.493579Z",
-     "iopub.status.idle": "2025-01-30T15:20:18.093199Z",
-     "shell.execute_reply": "2025-01-30T15:20:18.092673Z"
+     "iopub.execute_input": "2025-02-03T08:09:05.284772Z",
+     "iopub.status.busy": "2025-02-03T08:09:05.284469Z",
+     "iopub.status.idle": "2025-02-03T08:09:07.932153Z",
+     "shell.execute_reply": "2025-02-03T08:09:07.931514Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b772d16",
+   "id": "c1ff2c70",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26a72c39",
+   "id": "076cdc8c",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "835dec71",
+   "id": "4817ed28",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71013762",
+   "id": "f0424367",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f60d2a7a",
+   "id": "e8c1162f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T15:20:18.095170Z",
-     "iopub.status.busy": "2025-01-30T15:20:18.094977Z",
-     "iopub.status.idle": "2025-01-30T15:20:18.098870Z",
-     "shell.execute_reply": "2025-01-30T15:20:18.098290Z"
+     "iopub.execute_input": "2025-02-03T08:09:07.934406Z",
+     "iopub.status.busy": "2025-02-03T08:09:07.934196Z",
+     "iopub.status.idle": "2025-02-03T08:09:07.937672Z",
+     "shell.execute_reply": "2025-02-03T08:09:07.937182Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f58e9ce8540>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f4944f30a40>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b750f8c8",
+   "id": "ef656022",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,23 +577,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5639e961",
+   "id": "90efc6ea",
    "metadata": {},
    "source": [
-    "## Postprocesses"
+    "## Postprocessing"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "38493aea",
+   "id": "813ae37b",
    "metadata": {},
    "source": [
-    "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
+    "You can define custom postprocessing. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "137ebc9c",
+   "id": "ec8631d2",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "16775f1a",
+   "id": "8920d4e6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T15:20:18.100753Z",
-     "iopub.status.busy": "2025-01-30T15:20:18.100426Z",
-     "iopub.status.idle": "2025-01-30T15:20:18.103329Z",
-     "shell.execute_reply": "2025-01-30T15:20:18.102715Z"
+     "iopub.execute_input": "2025-02-03T08:09:07.939498Z",
+     "iopub.status.busy": "2025-02-03T08:09:07.939312Z",
+     "iopub.status.idle": "2025-02-03T08:09:07.942490Z",
+     "shell.execute_reply": "2025-02-03T08:09:07.942031Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "d2a62f57",
+   "id": "66102f53",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T15:20:18.105019Z",
-     "iopub.status.busy": "2025-01-30T15:20:18.104842Z",
-     "iopub.status.idle": "2025-01-30T15:20:19.165442Z",
-     "shell.execute_reply": "2025-01-30T15:20:19.164917Z"
+     "iopub.execute_input": "2025-02-03T08:09:07.944247Z",
+     "iopub.status.busy": "2025-02-03T08:09:07.943833Z",
+     "iopub.status.idle": "2025-02-03T08:09:09.009043Z",
+     "shell.execute_reply": "2025-02-03T08:09:09.008485Z"
     }
    },
    "outputs": [
