--- a/tutorials/la_lindblad.ipynb
+++ b/tutorials/la_lindblad.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4773674c",
+   "id": "880c7200",
    "metadata": {},
    "source": [
     "# Dissipation"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "941c4c69",
+   "id": "b1c956b2",
    "metadata": {},
    "source": [
     "GRANAD supports two dissipation models: A phenomenological dissipator, given by"
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "280e7d40",
+   "id": "e7a3455e",
    "metadata": {},
    "source": [
     "$$\\mathcal{D}[\\rho - \\rho_0] = \\frac{-1}{\\tau} (\\rho - \\rho_0)$$"
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31008d95",
+   "id": "fbe7c1aa",
    "metadata": {},
    "source": [
     "where $\\rho_0$ is the equilibrium density matrix and $1 / \\tau$ a phenomenological relaxation rate."
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e044c4a8",
+   "id": "7bbf1658",
    "metadata": {},
    "source": [
     "To model dissipation in greater depth, GRANAD makes available also a Lindblad dissipation model. The mathematical details are laid out in [Pelc et al., 2024](https://link.aps.org/doi/10.1103/PhysRevA.109.022237) and revolve around the following equation"
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05b19edf",
+   "id": "e8864687",
    "metadata": {},
    "source": [
     "$$\\gamma_{ij}(t) = \\gamma_{ij} \\cdot f(\\rho(t))$$"
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4519ccd1",
+   "id": "c42549cf",
    "metadata": {},
    "source": [
     "where $\\gamma_{ij}$ is the transition rate from state i to state j and $f$ is a relaxation functional to counteract problems related to the Pauli principle breaking that might occur in the single-particle model.\n",
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b86992d",
+   "id": "ede02989",
    "metadata": {},
    "source": [
     "$$f(x) = \\frac{1}{1 + e^{\\beta \\cdot(2 - x)}}$$"
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cfce2d5",
+   "id": "c6aba038",
    "metadata": {},
    "source": [
     "where x is the occupation and $\\beta$ a temperature-like control parameter to mimick a smooth Heaviside function, defaulting to 1e-6."
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c6ff2f9",
+   "id": "60594473",
    "metadata": {},
    "source": [
     "## Lindblad vs Phenomenological Relaxation dynamics of the Metallic Chain"
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c689c291",
+   "id": "2869c044",
    "metadata": {},
    "source": [
     "In the following, we will consider a metallic chain with a uniform transition rate, such that of $\\gamma_{ij} = \\gamma$ for all $i \\gt j$. We consider an initially excited state of one electron in the HOMO-LUMO+1 transition."
@@ -92,13 +92,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "15e36fd8",
+   "id": "891e609e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T15:22:47.812326Z",
-     "iopub.status.busy": "2025-01-30T15:22:47.812151Z",
-     "iopub.status.idle": "2025-01-30T15:22:52.764669Z",
-     "shell.execute_reply": "2025-01-30T15:22:52.764030Z"
+     "iopub.execute_input": "2025-02-03T08:11:40.396004Z",
+     "iopub.status.busy": "2025-02-03T08:11:40.395832Z",
+     "iopub.status.idle": "2025-02-03T08:11:45.427239Z",
+     "shell.execute_reply": "2025-02-03T08:11:45.426539Z"
     }
    },
    "outputs": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "547dfc7a",
+   "id": "fc75f930",
    "metadata": {},
    "source": [
     "We can now build the matrix of transition rates with a uniform $\\gamma = 10$ as follows"
@@ -132,13 +132,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c51eebc9",
+   "id": "669eb83b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T15:22:52.766812Z",
-     "iopub.status.busy": "2025-01-30T15:22:52.766362Z",
-     "iopub.status.idle": "2025-01-30T15:22:52.818090Z",
-     "shell.execute_reply": "2025-01-30T15:22:52.817590Z"
+     "iopub.execute_input": "2025-02-03T08:11:45.429244Z",
+     "iopub.status.busy": "2025-02-03T08:11:45.429057Z",
+     "iopub.status.idle": "2025-02-03T08:11:45.481370Z",
+     "shell.execute_reply": "2025-02-03T08:11:45.480872Z"
     }
    },
    "outputs": [],
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0cd1022d",
+   "id": "62e69b12",
    "metadata": {},
    "source": [
     "We can inspect the lumo-homo transition rate, for example, as"
@@ -159,13 +159,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4425cf55",
+   "id": "47786d94",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T15:22:52.820347Z",
-     "iopub.status.busy": "2025-01-30T15:22:52.819985Z",
-     "iopub.status.idle": "2025-01-30T15:22:52.848205Z",
-     "shell.execute_reply": "2025-01-30T15:22:52.847646Z"
+     "iopub.execute_input": "2025-02-03T08:11:45.483531Z",
+     "iopub.status.busy": "2025-02-03T08:11:45.483200Z",
+     "iopub.status.idle": "2025-02-03T08:11:45.510693Z",
+     "shell.execute_reply": "2025-02-03T08:11:45.510186Z"
     }
    },
    "outputs": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4612d24c",
+   "id": "dd29cd33",
    "metadata": {},
    "source": [
     "GRANAD dispatches the non-Hermitian functional depending on the `relaxation_rate` input type. If you pass a float, GRANAD uses the decoherence approximation. If you pass an array, it uses the Lindblad dissipator with a (smooth approximation of) the Heaviside function as the saturation functional. Modifications of the relaxation functional are discussed below."
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad7e7a3b",
+   "id": "ddd20873",
    "metadata": {},
    "source": [
     "We now integrate the master equation. "
@@ -200,13 +200,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f45ad8a2",
+   "id": "f706e4b2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T15:22:52.850126Z",
-     "iopub.status.busy": "2025-01-30T15:22:52.849790Z",
-     "iopub.status.idle": "2025-01-30T15:22:54.393880Z",
-     "shell.execute_reply": "2025-01-30T15:22:54.393304Z"
+     "iopub.execute_input": "2025-02-03T08:11:45.512657Z",
+     "iopub.status.busy": "2025-02-03T08:11:45.512292Z",
+     "iopub.status.idle": "2025-02-03T08:11:47.097206Z",
+     "shell.execute_reply": "2025-02-03T08:11:47.096564Z"
     }
    },
    "outputs": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "932deadb",
+   "id": "91bebcb8",
    "metadata": {},
    "source": [
     "We plot the changes in single-particle energy occupations as a function of time by defining the `plot_labels` argument as the energies"
@@ -244,13 +244,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5814c8da",
+   "id": "237fd9e3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T15:22:54.395784Z",
-     "iopub.status.busy": "2025-01-30T15:22:54.395471Z",
-     "iopub.status.idle": "2025-01-30T15:22:54.815159Z",
-     "shell.execute_reply": "2025-01-30T15:22:54.814631Z"
+     "iopub.execute_input": "2025-02-03T08:11:47.099579Z",
+     "iopub.status.busy": "2025-02-03T08:11:47.099134Z",
+     "iopub.status.idle": "2025-02-03T08:11:47.549331Z",
+     "shell.execute_reply": "2025-02-03T08:11:47.548714Z"
     }
    },
    "outputs": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e5e83f1",
+   "id": "fe43d169",
    "metadata": {},
    "source": [
     "A comparison to to the phenomenological approach can be obtained by"
@@ -281,13 +281,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a4ad72b7",
+   "id": "d007fc2b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T15:22:54.817029Z",
-     "iopub.status.busy": "2025-01-30T15:22:54.816839Z",
-     "iopub.status.idle": "2025-01-30T15:22:55.791462Z",
-     "shell.execute_reply": "2025-01-30T15:22:55.790869Z"
+     "iopub.execute_input": "2025-02-03T08:11:47.551373Z",
+     "iopub.status.busy": "2025-02-03T08:11:47.551028Z",
+     "iopub.status.idle": "2025-02-03T08:11:48.520102Z",
+     "shell.execute_reply": "2025-02-03T08:11:48.519585Z"
     }
    },
    "outputs": [
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10628ebc",
+   "id": "137b50dd",
    "metadata": {},
    "source": [
     "By comparing the two plots above, we observe a set of qualitative differences, discussed in greater detail in the [corresponding paper](https://link.aps.org/doi/10.1103/PhysRevA.109.022237)."
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3fcd87b",
+   "id": "e5f30da5",
    "metadata": {},
    "source": [
     "GRANAD imposes a degeneracy tolerance on the states. This means that all states separated by less than a numerical threshold are considered degenerate. The threshold is specified as variable `flake.params.eps`."
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c58e9ad",
+   "id": "48632a1f",
    "metadata": {},
    "source": [
     "## Modifying the saturation functional"
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ece4eba",
+   "id": "189e6e69",
    "metadata": {},
    "source": [
     "The saturation functional can be customized by defining a saturation function and modifying the dissipator dict (for more information, please consult the tutorial on custom time evolution)."
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1826582",
+   "id": "9b8d5b5f",
    "metadata": {},
    "source": [
     "1. initialize a dissipator with your custom relaxation functional\n",
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2df2f993",
+   "id": "986c1aa8",
    "metadata": {},
    "source": [
     "To illustrate the necessity of introducing a saturation functional, we consider the case where no saturation is applied, i.e. $f(x) = 1$"
@@ -377,13 +377,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "638a115f",
+   "id": "8e0b7350",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T15:22:55.793580Z",
-     "iopub.status.busy": "2025-01-30T15:22:55.793204Z",
-     "iopub.status.idle": "2025-01-30T15:22:57.892135Z",
-     "shell.execute_reply": "2025-01-30T15:22:57.891534Z"
+     "iopub.execute_input": "2025-02-03T08:11:48.522206Z",
+     "iopub.status.busy": "2025-02-03T08:11:48.521839Z",
+     "iopub.status.idle": "2025-02-03T08:11:50.606541Z",
+     "shell.execute_reply": "2025-02-03T08:11:50.606022Z"
     }
    },
    "outputs": [
@@ -430,22 +430,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8a8ee4a",
+   "id": "84a89474",
    "metadata": {},
    "source": [
-    "We observe an almost complete collapse into the single-particle ground state, which can be revealed to be an Coulomb interaction effect."
+    "We observe an almost complete collapse into the single-particle ground state. The nonzero stationary occupation of excited states can be revealed to be an Coulomb interaction effect."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "803763b0",
+   "id": "fb15aa65",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T15:22:57.894152Z",
-     "iopub.status.busy": "2025-01-30T15:22:57.893801Z",
-     "iopub.status.idle": "2025-01-30T15:22:58.929667Z",
-     "shell.execute_reply": "2025-01-30T15:22:58.929042Z"
+     "iopub.execute_input": "2025-02-03T08:11:50.608572Z",
+     "iopub.status.busy": "2025-02-03T08:11:50.608177Z",
+     "iopub.status.idle": "2025-02-03T08:11:51.631304Z",
+     "shell.execute_reply": "2025-02-03T08:11:51.630798Z"
     }
    },
    "outputs": [
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d77eb5e",
+   "id": "43adf8dd",
    "metadata": {},
    "source": [
     "## Wigner-Weisskopf transition rates"
@@ -495,22 +495,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecc00e74",
+   "id": "fec19a7e",
    "metadata": {},
    "source": [
-    "GRANAD offers the single-particle Wigner-Weisskopf transition rates directly in a matrix form "
+    "GRANAD offers the single-particle Wigner-Weisskopf transition rates that can be represented directly in a matrix form. The \"ij\" matrix element corresponds to the relaxation rate from the state i to j."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "988e6f80",
+   "id": "6d60f873",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T15:22:58.931706Z",
-     "iopub.status.busy": "2025-01-30T15:22:58.931256Z",
-     "iopub.status.idle": "2025-01-30T15:22:59.247537Z",
-     "shell.execute_reply": "2025-01-30T15:22:59.247003Z"
+     "iopub.execute_input": "2025-02-03T08:11:51.633315Z",
+     "iopub.status.busy": "2025-02-03T08:11:51.632933Z",
+     "iopub.status.idle": "2025-02-03T08:11:51.953052Z",
+     "shell.execute_reply": "2025-02-03T08:11:51.952568Z"
     }
    },
    "outputs": [
